--- a/public/partialviews/permission/group.html
+++ b/public/partialviews/permission/group.html
@@ -17,18 +17,18 @@
 					<div class="row">
 						<div class="col-sm-2">
 							<div class="list-group">
-								<a class="list-group-item" ng-class="{'active':(group.select)}" ng-repeat="group in displayMaintainGroup.groupList" ng-click="changeSelectGroup(group)">
+								<a class="list-group-item" ng-class="{'active':(group.select), 'disabled':(!group.enable)}"  ng-repeat="group in displayMaintainGroup.groupList" ng-click="changeSelectGroup(group)">
 								{{group.name}}
 								</a>
 							</div>
 						</div>
-						<div class="col-sm-10">
+						<div class="col-sm-10" ng-class="{'show':(displayMaintainGroup.currentSelectGroup.enable), 'hidden':(!displayMaintainGroup.currentSelectGroup.enable)}">
 							<div class="row">
 								<div class="col-sm-12">
 								  	<div class="form-group form-horizontal">
 										<label for="modifyGroupName" class="col-sm-2 control-label">Group Name</label>
 										<div class="col-sm-3">
-											<input type="text" class="form-control" id="modifyGroupName" placeholder="Enter group name" />
+											<input type="text" class="form-control" id="modifyGroupName" ng-model="displayMaintainGroup.currentSelectGroup.name" placeholder="Enter group name" />
 										</div>
 									</div>
 								</div>
@@ -40,7 +40,7 @@
     <div class="panel-heading" role="tab" id="headingOne">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" data-target="#collapseOfficeAndDepartment" aria-expanded="true" aria-controls="collapseOfficeAndDepartment">
-          Office and Department
+          Modify Office and Department
         </a>
       </h4>
     </div>
