--- a/public/partialviews/permission/group.html
+++ b/public/partialviews/permission/group.html
@@ -39,7 +39,8 @@
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingOne">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" data-target="#collapseOfficeAndDepartment" aria-expanded="true" aria-controls="collapseOfficeAndDepartment">
+      
+        <a data-toggle="collapse" data-parent="#accordion" data-target="#collapseOfficeAndDepartment" aria-expanded="true" >
           Modify Office and Department
         </a>
       </h4>
@@ -49,7 +50,7 @@
         <!-- Office and Department -->
 
         <div>
-			<div class="form-horizontal col-md-6" style="border-right: 1px solid #cecece;">
+			<div class="form-horizontal col-sm-6" style="border-right: 1px solid #cecece;">
 				<div class="form-group">
 					<label class="col-sm-2 control-label">Office:</label>
 					<div class="col-sm-8">
@@ -70,7 +71,7 @@
 					<button class="btn btn-primary btn-sm col-sm-offset-8" ng-click="addDepartment()">Add</button>
 				</div>
 			</div>
-			<div class="panel panel-default col-md-offset-1 col-md-5" style="padding-left: 0px; padding-right: 0px;">
+			<div class="panel panel-default col-sm-offset-1 col-sm-5" style="padding-left: 0px; padding-right: 0px;">
 				<div class="panel-heading">
 					Added departments
 				</div>
@@ -107,21 +108,58 @@
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingTwo">
       <h4 class="panel-title">
-        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" data-target="#collapseRole" aria-expanded="true" aria-controls="collapseRole">
+        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" data-target="#collapseRole" aria-expanded="false" >
           Modify Role
         </a>
       </h4>
     </div>
     <div id="collapseRole" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
       <div class="panel-body">
-        Modify Role
+	        <div class="form-horizontal col-sm-6" style="border-right: 1px solid #cecece;">
+				<div class="form-group">
+					<label class="col-sm-3 control-label">Role Name:</label>
+					<div class="col-sm-7">
+						<input type="text" class="form-control" placeholder="Enter new role name" ng-model="newRoleName">
+					</div>
+				</div>
+				<div class="form-group">
+					<button class="btn btn-primary btn-sm col-sm-1 col-sm-offset-8" ng-click="addRoleName()">Add</button>
+				</div>
+			</div>
+			<div class="panel panel-default col-sm-offset-1 col-sm-5" style="padding-left: 0px; padding-right: 0px;">
+				<div class="panel-heading">
+					Added roles
+				</div>
+				<div class="panel-body">
+					<table class="table">
+						<thead>
+							<th>#</th>
+							<th>Role Name</th>
+						</thead>
+						<tbody>
+							<tr data-ng-repeat="item in originModifyData.roles">
+								<td>
+									<a>
+										<!-- class="glyphicon glyphicon-minus" -->
+										<span ng-class="{'glyphicon glyphicon-minus':item.name != 'Manager'}"  ng-click="minusRole($index)"></span>
+									</a>
+								</td>
+								<td>
+									{{item.name}}
+								</td>
+
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
       </div>
     </div>
   </div>
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingThree">
       <h4 class="panel-title">
-        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" data-target="#collapsePermission" aria-expanded="true" aria-controls="collapsePermission">
+        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" data-target="#collapsePermission" aria-expanded="false" >
           Modify Permission
         </a>
       </h4>
@@ -135,7 +173,7 @@
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingfour">
       <h4 class="panel-title">
-        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" data-target="#collapseColleagues" aria-expanded="true" aria-controls="collapseColleagues">
+        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" data-target="#collapseColleagues" aria-expanded="false" >
           Modify Colleagues
         </a>
       </h4>
@@ -151,7 +189,7 @@
 <p>
 <pre>
 displayMaintainGroup = {{displayMaintainGroup | json}}
-submitModifyGroup = {{submitModifyGroup | json}}
+originModifyData = {{originModifyData | json}}
 </pre>
 </p>
 </div>
@@ -168,21 +206,25 @@ submitModifyGroup = {{submitModifyGroup | json}}
 				<div class="newGroup_container">
 					<div id="stepItems">
 						<ul class="processor-bar">
-							<li class="step grid-item size1of4 current" id="newgroup-step-1">
+							<li class="step grid-item size1of4" id="newgroup-step-1" 
+							ng-class="{'current': steps.currentStep == 1, 'passed':steps.currentStep > 1}">
 								<h4>1 Select departments</h4>
 							</li>
-							<li class="step grid-item size1of4 next" id="newgroup-step-2">
+							<li class="step grid-item size1of4" id="newgroup-step-2" 
+							ng-class="{'next': steps.currentStep == 1, 'current':steps.currentStep == 2, 'passed':steps.currentStep > 2}">
 								<h4>2 Edit group</h4>
 							</li>
-							<li class="step grid-item size1of4 nnext" id="newgroup-step-3">
+							<li class="step grid-item size1of4" id="newgroup-step-3" 
+							ng-class="{'next': steps.currentStep == 2, 'current':steps.currentStep == 3, 'passed':steps.currentStep > 3}">
 								<h4>3 Add Permission</h4>
 							</li>
-							<li class="step grid-item size1of4 nnext" id="newgroup-step-4">
+							<li class="step grid-item size1of4" id="newgroup-step-4"
+							ng-class="{'next': steps.currentStep == 3, 'current':steps.currentStep == 4, 'passed':steps.currentStep >= 4}">
 								<h4>4 Add Colleagues</h4>
 							</li>
 						</ul>
 					</div>
-					<div style="margin-top: 20px; height: 400px;" id="step1Container">
+					<div style="margin-top: 20px; height: 400px;" id="step1Container" ng-show="steps.list['1'].isShow">
 						<div class="form-horizontal col-md-6" style="border-right: 1px solid #cecece; height: 100%">
 							<div class="form-group">
 								<label class="col-md-2 control-label">Office:</label>
@@ -201,10 +243,12 @@ submitModifyGroup = {{submitModifyGroup | json}}
 								</div>
 							</div>
 							<div class="form-group">
-								<button class="btn btn-primary col-md-1 col-md-offset-8" ng-click="addDept()">Add</button>
+								<!-- <button class="btn btn-primary col-md-1 col-md-offset-8" ng-click="addDept()">Add</button> -->
+
+								<button class="btn btn-primary col-md-1 col-md-offset-8" ng-click="addOfficeAndDepartment_create();">Add</button>
 							</div>
 						</div>
-						<div class="panel panel-default col-md-offset-1 col-md-5" style="padding-left: 0px; padding-right: 0px;">
+						<!-- <div class="panel panel-default col-md-offset-1 col-md-5" style="padding-left: 0px; padding-right: 0px;">
 							<div class="panel-heading">
 								Added departments
 							</div>
@@ -233,31 +277,69 @@ submitModifyGroup = {{submitModifyGroup | json}}
 									</tbody>
 								</table>
 							</div>
-						</div>
-					</div>
-					<div style="margin-top: 20px; height: 400px; display:none" id="step2Container">
-						<div class="form-horizontal col-md-4 col-md-offset-4" >
-							<div class="form-group" id="newGroupNameDiv">
-								<input type="text" class="form-control" placeholder="Enter Group Name" ng-model="newGroup.groupName" ng-blur="checkExistedName()">
-								<span class="glyphicon glyphicon-remove form-control-feedback"></span>
+						</div> -->
+
+
+						<div class="panel panel-default col-md-offset-1 col-md-5" style="padding-left: 0px; padding-right: 0px;">
+							<div class="panel-heading">
+								Added departments
+							</div>
+							<div class="panel-body">
+								<table class="table">
+									<thead>
+										<th>#</th>
+										<th>Office</th>
+										<th>Department</th>
+									</thead>
+									<tbody>
+										<tr data-ng-repeat="item in createGroup.officeAndDepartments">
+											<td>
+												<a>
+													<span class="glyphicon glyphicon-minus" ng-click="removeOfficeAndDepartment_create($index)"></span>
+												</a>
+											</td>
+											<td>
+												{{item.office.name}}
+											</td>
+											<td>
+												{{item.dept.name}}
+											</td>
+
+										</tr>
+									</tbody>
+								</table>
 							</div>
 						</div>
-						<div class="col-md-4 form-group alert-danger alert-dismissible">
+
+
+
+
+
+					</div>
+					<div style="margin-top: 20px; height: 400px;" id="step2Container" ng-show="steps.list['2'].isShow">
+						<div class="form-horizontal col-md-4 col-md-offset-4" >
+							<div class="form-group" id="newGroupNameDiv">
+
+								<input type="text" class="form-control" placeholder="Enter Group Name" ng-model="createGroup.groupName">
+								<!-- <span class="glyphicon glyphicon-remove form-control-feedback"></span> -->
+							</div>
+						</div>
+						<!-- <div class="col-md-4 form-group alert-danger alert-dismissible">
 							<ul>
 								<li>
 									The group name is already existed.
 								</li>
 							</ul>
-						</div>
+						</div> -->
 						<div class="form-horizontal col-md-6" style="border-right: 1px solid #cecece; height: 100%">
 							<div class="form-group">
 								<label class="col-md-3 control-label">Role Name:</label>
 								<div class="col-md-7">
-									<input type="text" class="form-control" placeholder="Enter new role name" ng-model="newRoleName">
+									<input type="text" class="form-control" placeholder="Enter new role name" ng-model="createGroup.newRoleName">
 								</div>
 							</div>
 							<div class="form-group">
-								<button class="btn btn-primary col-md-1 col-md-offset-9" ng-click="addRoleName()">Add</button>
+								<button class="btn btn-primary col-md-1 col-md-offset-9" ng-click="addRole_create()">Add</button>
 							</div>
 						</div>
 						<div class="panel panel-default col-md-offset-1 col-md-5" style="padding-left: 0px; padding-right: 0px;">
@@ -271,11 +353,11 @@ submitModifyGroup = {{submitModifyGroup | json}}
 										<th>Role Name</th>
 									</thead>
 									<tbody>
-										<tr data-ng-repeat="item in newGroup.addedRoles">
+										<tr data-ng-repeat="item in createGroup.roles">
 											<td>
 												<a>
 													<!-- class="glyphicon glyphicon-minus" -->
-													<span ng-class="{'glyphicon glyphicon-minus':item.name != 'Manager'}"  ng-click="minusRole($index)"></span>
+													<span ng-class="{'glyphicon glyphicon-minus':item.name != 'Manager'}"  ng-click="removeRole_create($index)"></span>
 												</a>
 											</td>
 											<td>
@@ -288,10 +370,52 @@ submitModifyGroup = {{submitModifyGroup | json}}
 							</div>
 						</div>
 					</div>
-					<div style="margin-top: 20px; height: 400px; display:none" id="step3Container">
+					<!-- <div style="margin-top: 20px; height: 400px;" id="step3Container" ng-show="steps.list['3'].isShow">
 						<div class="col-md-2 col-md-offset-1">
 							<div class="list-group">
 								<a class="list-group-item" ng-class="{'list-group-item-success': (item.selectedCount > 0),'list-group-item-warning':(item.selectedCount == 0),'active':item.edit }" ng-repeat="item in newGroup.addedRoles" ng-click="showRolePermission($index)">
+									<span class="badge">{{item.selectedCount}}</span>{{item.name}}
+								</a>
+							</div>
+						</div>
+						<div class="col-md-9">
+							<div class="checkbox">
+							    <label>
+							      <input type="checkbox" ng-disabled="permissionInfo.editCurrentGroup.isDisabled" ng-model="permissionInfo.editCurrentGroup.isEdit">Editable for {{newGroup.groupName}}
+							    </label>
+						  	</div>
+							<div permission-area categoriedpermissions="permissionInfo.displayedPermission" selectedcountchange="changedPermissionCount(checked)"></div>
+						</div>
+					</div> -->
+
+					<!-- <div style="margin-top: 20px; height: 400px;" id="step3Container" ng-show="steps.list['3'].isShow">
+						<div class="col-md-2 col-md-offset-1">
+							<div class="list-group">
+								<a class="list-group-item" 
+								ng-class="{'list-group-item-success': (item.selectedCount > 0),'list-group-item-warning':(item.selectedCount == 0),'active':item.edit }" 
+								ng-repeat="item in createGroup.roles" 
+								ng-click="showRolePermission($index)">
+									<span class="badge">{{item.selectedCount}}</span>{{item.name}}
+								</a>
+							</div>
+						</div>
+						<div class="col-md-9">
+							<div class="checkbox">
+							    <label>
+							      <input type="checkbox" ng-disabled="permissionInfo.editCurrentGroup.isDisabled" ng-model="permissionInfo.editCurrentGroup.isEdit">Editable for {{newGroup.groupName}}
+							    </label>
+						  	</div>
+							<div permission-area categoriedpermissions="permissionInfo.displayedPermission" selectedcountchange="changedPermissionCount(checked)"></div>
+						</div>
+					</div> -->
+
+					<div style="margin-top: 20px; height: 400px;" id="step3Container" ng-show="steps.list['3'].isShow">
+						<div class="col-md-2 col-md-offset-1">
+							<div class="list-group">
+								<a class="list-group-item" 
+								ng-class="{'list-group-item-success': (item.selectedCount > 0),'list-group-item-warning':(item.selectedCount == 0),'active':item.edit }" 
+								ng-repeat="item in createGroup.roles" 
+								ng-click="showSelectedRolePermission($index)">
 									<span class="badge">{{item.selectedCount}}</span>{{item.name}}
 								</a>
 							</div>
@@ -308,7 +432,7 @@ submitModifyGroup = {{submitModifyGroup | json}}
 
 
 
-					<div style="margin-top: 20px; height: 400px; display:none" id="step4Container">
+					<div style="margin-top: 20px; height: 400px;" id="step4Container" ng-show="steps.list['4'].isShow">
 
 						<div class="col-md-5" style="float:left;">
 							<div class="form-inline" >
@@ -323,7 +447,7 @@ submitModifyGroup = {{submitModifyGroup | json}}
 									</select>
 								</div>
 								<div class="form-group">
-									<button class="btn btn-primary btn-sm" ng-click="searchUserByOfficeAndDepartment(selectedOffice, selectedDept);" ng-disabled="isSubmitting">
+									<button class="btn btn-primary btn-sm" ng-click="searchUserByOfficeAndDepartment_create(selectedOffice, selectedDept);" ng-disabled="isSubmitting">
 									Search
 									</button>
 								</div>
@@ -337,14 +461,15 @@ submitModifyGroup = {{submitModifyGroup | json}}
 										</tr>
 									</thead>
 									<tbody>
-										<tr ng-show="step4SearchUsers.length <= 0">
+
+										<tr ng-show="createGroup.searchUsers.length <= 0">
 											<td colspan="3">No records...</td>
 										</tr>
-										<tr data-ng-repeat="searchUser in step4SearchUsers">
+										<tr data-ng-repeat="searchUser in createGroup.searchUsers">
 											<td>{{searchUser.fullName}}</td>
 											<td>
 											<a>
-												<span class="glyphicon glyphicon-plus" ng-click="addToTempList($index)"></span>
+												<span class="glyphicon glyphicon-plus" ng-click="createGroup.addSubmitUser($index)"></span>
 											</a>
 											</td>
 										</tr>
@@ -365,7 +490,7 @@ submitModifyGroup = {{submitModifyGroup | json}}
 										</tr>
 									</thead>
 									<tbody>
-										<tr data-ng-repeat="user in step4TempUserList">
+										<tr data-ng-repeat="user in createGroup.submitUsers">
 											<td>
 												<a>
 													<span class="glyphicon glyphicon-minus" ng-click="deleteCurrentUser($index);"></span>
@@ -375,7 +500,7 @@ submitModifyGroup = {{submitModifyGroup | json}}
 											<td>
 												<ui-select multiple ng-model="user.roles" theme="bootstrap" ng-disabled="isSubmitting" close-on-select="false" style="width:400px; ">
 													<ui-select-match placeholder="Select roles...">{{$item.name}}</ui-select-match>
-													<ui-select-choices repeat="role.name as role in newGroup.addedRoles | filter:$select.search">
+													<ui-select-choices repeat="role.name as role in createGroup.roles | filter:$select.search">
 													{{role.name}}
 													</ui-select-choices>
 												</ui-select>
@@ -389,15 +514,22 @@ submitModifyGroup = {{submitModifyGroup | json}}
 					<div>
 						<button class="btn btn-primary col-md-1 col-md-offset-9" ng-click="pre();" id="preBtn" ng-disabled="isSubmitting">pre step</button>
 						<button class="btn btn-primary col-md-1 col-md-offset-1" ng-click="next();" id="nextBtn" ng-disabled="isSubmitting">next step</button>
+
+						
+						<button class="btn btn-primary col-md-1 col-md-offset-9" ng-click="steps.preStep.pre();" id="preBtn" ng-disabled="steps.preStep.disabled">
+						{{steps.preStep.text}}
+						</button>
+						<button class="btn btn-primary col-md-1 col-md-offset-1" ng-click="steps.nextStep.next();" id="nextBtn" ng-disabled="steps.nextStep.disabled">
+						{{steps.nextStep.text}}
+						</button>
 					</div>
 
 <div class="form-group">
 <p>
 <pre>
 {{userInfo}}
-{{submitGroup | json}}
-<!-- {{step4TempUserList | json}} -->
-{{newGroup | json}}
+{{createGroup | json}}
+
 </pre>
 </p>
 </div>
