add modifyGroup submit function

--- a/public/partialviews/permission/group.html
+++ b/public/partialviews/permission/group.html
@@ -27,7 +27,7 @@
                                     <div class="form-group form-horizontal">
                                         <label for="modifyGroupName" class="col-sm-2 control-label">Group Name</label>
                                         <div class="col-sm-3">
-                                            <input type="text" class="form-control" id="modifyGroupName" ng-model="displayMaintainGroup.currentSelectGroup.name" placeholder="Enter group name" />
+                                            <input type="text" class="form-control" id="modifyGroupName" ng-model="modifyGroup.group.name" placeholder="Enter group name" />
                                         </div>
                                     </div>
                                 </div>
@@ -316,7 +316,7 @@
                             		<div class="form-group">
                                         <p>
                                             <pre>
-												displayMaintainGroup = {{displayMaintainGroup | json}}
+												<!-- displayMaintainGroup = {{displayMaintainGroup | json}} -->
 												submitGroup = {{modifyGroup.submitGroup | json}}
 											</pre>
                                         </p>
