--- a/public/partialviews/menu.html
+++ b/public/partialviews/menu.html
@@ -2,10 +2,10 @@
 	<ul class="nav navbar-nav">
 		<li><a href="/">Main</a></li>
 		<li class="dropdown">
-			<a href="" class="dropdown-toggle" data-toggle="dropdown">Function<span  class="caret"></span></a>
+			<a href="" class="dropdown-toggle" data-toggle="dropdown" ng-show="hasPermission([2,3,4,5])">Function<span  class="caret"></span></a>
 			<ul class="dropdown-menu" role="menu">
 				<li>
-					<a href="/SO#/main">SO</a>
+					<a href="/SO#/main" ng-show="hasPermission([2,3,4,5])">SO</a>
 				</li>
 				<li ng-repeat="item in userInfo.menu">
 					<a ng-href="#{{item}}" >{{item}}</a>
@@ -14,11 +14,11 @@
 		</li>
 		<li><a href="#setPermission"></a></li>
 		<li class="dropdown">
-			<a href="" class="dropdown-toggle" data-toggle="dropdown">Permission System<span  class="caret"></span></a>
+			<a href="" class="dropdown-toggle" data-toggle="dropdown" ng-show="hasPermission([6,7,8])">Permission System<span  class="caret"></span></a>
 			<ul class="dropdown-menu" role="menu">
 				<li>
-					<a href="/main#/Permission/Group" >Group</a>
-					<a href="/main#/Permission/ModifyPermission">Permission</a>
+					<a href="/main#/Permission/Group" ng-show="hasPermission([6,7])" >Group</a>
+					<a href="/main#/Permission/ModifyPermission" ng-show="hasPermission([8])">Permission</a>
 				</li>
 			</ul>
 		</li>
