--- a/public/partialviews/permission/permissionTemplate.html
+++ b/public/partialviews/permission/permissionTemplate.html
@@ -1,5 +1,5 @@
 <div class="panel-group" id="permissions" role="tablist" aria-multiselectable="true">
-	<div class="panel panel-default" ng-repeat="item in data">
+	<div class="panel panel-default" ng-repeat="item in data" ng-hide="item.isHide">
 		<div class="panel-heading" role="tab" id="cate_{{item.categoryId}}">
 			<h4 class="panel-title">
 				<a data-toggle="collapse" data-target="#cate_collapse{{item.categoryId}}" aria-expanded="true" aria-controls="cate_collapse{{item.categoryId}}">
